--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,57 @@
     </div>
     <mat-divider></mat-divider>
   </section>
+  <div class="row row-cols-2 gy-4">
+    <div class="col">
+      <mat-card class="elevated" style="height: 400px">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title></mat-card-title>
+          <mat-card-subtitle></mat-card-subtitle>
+        </mat-card-header>
+        <img
+          mat-card-image
+        />
+        <mat-card-content>
+          <p></p>
+        </mat-card-content>
+        <mat-card-actions>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    <div class="col">
+      <mat-card class="filled" style="height: 400px">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title></mat-card-title>
+          <mat-card-subtitle></mat-card-subtitle>
+        </mat-card-header>
+        <img
+          mat-card-image
+        />
+        <mat-card-content>
+          <p></p>
+        </mat-card-content>
+        <mat-card-actions>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    <div class="col">
+      <mat-card class="outline" style="height: 400px">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title></mat-card-title>
+          <mat-card-subtitle></mat-card-subtitle>
+        </mat-card-header>
+        <img
+          mat-card-image
+        />
+        <mat-card-content>
+          <p></p>
+        </mat-card-content>
+        <mat-card-actions>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
 </div>
