--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @use '@angular/material' as mat;
 @import './theme.scss';
+@import './palette.scss';
 
 // Include the theme mixins for other components you use here.
 
