--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
   <section class="my-3">
     <div class="row text-center m-2 justify-content-center">
       <div class="col">
